--- a/src/Unit/c9.css
+++ b/src/Unit/c9.css
@@ -1,6 +1,8 @@
 canvas{
     height:auto!important;
     width:100%!important;
-  max-height:20rem!important;
+  min-height:20rem!important;
     font-size:2px!important;
+    border-radius:0.5rem!important;
+
 }
